44/60 JavaScript Fundamentals Bangla Tutorial (Base64 Decode and Encode)–Part:44

--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ body{font-family: arial; font-size: 18px; color: #444; line-height: 25px; backgr
 .content{background:#f0f0f0; width:800px; margin:0 auto;}
 .maincontent{background:#fff; margin:10px; min-height:500px; padding:5px 10px;}
 .header, .footer{text-align:center; background:#ddd; padding:#ddd;}
-.header h2, .footer h2 {
-	font-size: 35px;
-}
+.header h2, .footer h2 {	font-size: 35px;}
+button{	padding: 2px 10px; font-size: 20px; cursor: pointer; margin-bottom: 10px;}
+table{width: 270px; margin: 0 auto; padding: 10px; border: 1px solid #ddd;}
+input[type="text"]{width: 100px; padding: 5px 8px;}
+input[type="button"]{width: 120px; padding: 5px; cursor: pointer;   }
