60/60 JavaScript Fundamentals Bangla Tutorial (Form Validation: IV)-Part: 60 of 01. JavaScript Fundamentals Tutorial Program of First Review Immediately Completed.

--- a/Part-49main.css
+++ b/Part-49main.css
@@ -7,5 +7,8 @@ body{font-family: arial; font-size: 18px; color: #444; line-height: 25px; backgr
 button{	padding: 2px 10px; font-size: 20px; cursor: pointer; margin-bottom: 10px;}
 table{width: 500px; margin: 0 auto; padding: 10px; border: 1px solid #ddd;}
 input[type="text"] {width: 300px; padding: 5px 8px;}
-input[type="button"]{width: 120px; padding: 5px; cursor: pointer;   }
+input[type="email"] {width: 300px; padding: 5px 8px;}
+input[type="button"], input[type="reset"], input[type="submit"]{width: 120px; padding: 5px; cursor: pointer;   }
 #showValue{width: 300px; padding: 5px 8px; height: 200px;}
+select{font-size: 16px; padding: 3px; cursor: pointer;}
+#state{color: aqua;}
